# elastomer-LGEDM

./: .gitignore  LICENSE  README.rst  conda-requirements.txt  setup.cfg
elastomer_lgedm/: __init__.py  composite_ufjc.py  composite_ufjc_network.py  core.py  default_parameters.py  problem.py  rate_dependence_scission.py  scission_model.py  utility.py
notched-crack/: notched_crack.py
refined-notched-crack/: refined_notched_crack.py
