[metadata]
name = elastomer_lgedm
version = attr: elastomer_lgedm.__version__
url = https://github.com/jasonmulderrig/elastomer-LGEDM
author = Jason Mulderrig, Brandon Talamini, Nikolaos Bouklas
author_email = jpm445@cornell.edu, talamini1@llnl.gov, nb589@cornell.edu
maintainer = Jason Mulderrig
maintainer_email = jpm445@cornell.edu, mulderrig.jason@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
license = GNU General Public License v3 or later (GPLv3+)
license_files = 
    LICENSE
description = The Python package for the composite uFJC model in the context of non-local chain scission taking place in a polymer network undergoing fracture.
long_description = file: README.rst
keywords = ufjc, non-local chain scission, polymer network fracture, asymptotic matching, thermodynamics, statistical mechanics, chain extensibility, polymer chain scission, distorted bond potential, dissipated energy, fracture toughness